Committed the completed project

--- a/src/blog/templates/Post/post_list.html
+++ b/src/blog/templates/Post/post_list.html
@@ -10,7 +10,7 @@
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7" data-aos="fade-up">
                   <h2 class="heading">Blog Grid</h2>
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo saepe dolorum dolorem, iste officia voluptates! Sint repudiandae, soluta voluptatem delectus iure, eaque, harum expedita, nisi aliquam magni odio perferendis ipsum!</p>
+                  <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver. Maja began twenty years back being a dishwasher and become a line cook after, then a sous chef and lastly a chef. She’s a writer of both fiction and non-fiction books. Maya has got his very own technique of celebrating food, and she enjoys testing them. </p>
                 </div>
               </div>
             </div>
