--- a/src/meals/templates/Meals/list.html
+++ b/src/meals/templates/Meals/list.html
@@ -10,7 +10,7 @@
             <div class="container">
               <div class="row align-items-center">
                 <div class="col-md-12" data-aos="fade-up">
-                  <h2 class="heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit ipsa sint amet aliquam velit minima tenetur quisquam beatae molestiae possimus dicta.</h2>
+                  <h2 class="heading">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver. Maja began twenty years back being a dishwasher and become a line cook after, then a sous chef and lastly a chef. She’s a writer of both fiction and non-fiction books. Maya has got his very own technique of celebrating food, and she enjoys testing them. </h2>
                 </div>
               </div>
             </div>
