--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -54,7 +54,7 @@
             </ul>
           </div>
           <div class="col-2 col-md-6 text-center">
-            <a href="index.html" class="site-logo">D</a>
+            <a href="index.html" class="site-logo">MY</a>
           </div>
           <div class="col-5 col-md-3 text-right menu-burger-wrap">
             <a href="#" class="site-nav-toggle js-site-nav-toggle"><i></i></a>
