Committed the completed project update

--- a/src/aboutus/templates/aboutus/about.html
+++ b/src/aboutus/templates/aboutus/about.html
@@ -39,7 +39,7 @@
             <div class="row justify-content-center mb-5" data-aos="fade-up">
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Why Choose Us</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                <p class="lead">Because Maja Yurskaja is the best.</p>
               </div>
             </div>
             <div class="row large-gutters">
@@ -74,7 +74,7 @@
             <div class="row justify-content-center mb-5" data-aos="fade-up">
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Restaurants Chef</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                <p class="lead">Maja Yurskaja is the best.</p>
               </div>
             </div>
             <div class="row">
