--- a/src/home/templates/home/index.html
+++ b/src/home/templates/home/index.html
@@ -29,7 +29,7 @@
                   </div>
                   <div class="media-body">
                     <h3>Quality Cuisine</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
+                    <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                   </div>
                 </div>
               </div>
@@ -40,7 +40,7 @@
                   </div>
                   <div class="media-body">
                     <h3>Fresh Food</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
+                    <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                   </div>
                 </div>
               </div>
@@ -51,7 +51,7 @@
                   </div>
                   <div class="media-body">
                     <h3>Friendly Staff</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
+                    <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                   </div>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                   </div>
                   <div class="media-body">
                     <h3>Easy Reservation</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non pariatur suscipit repudiandae facilis incidunt unde saepe</p>
+                    <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                   </div>
                 </div>
               </div>
@@ -75,7 +75,7 @@
             <div class="row justify-content-center">
               <div class="col-md-7 text-center"  data-aos="fade-up">
                 <h2 class="mb-4">Our Specialties</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eum voluptatem odio expedita laborum fugit repudiandae dolorem consectetur.</p>
+                <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
             <div class="row justify-content-center mb-5" data-aos="fade-up">
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Events &amp; News</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
               </div>
             </div>
             <div class="row">
@@ -189,7 +189,7 @@
                   <div class="media-body">
                     <h3><a href="{% url 'blog:post_detail' latest_post.id %}">{{latest_post.title}}</a></h3>
                     <p class="post-meta"><span><span class="fa fa-calendar"></span> April 22, 2018</span></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto illo delectus</p>
+                    <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver</p>
                     <p><a href="{% url 'blog:post_detail' latest_post.id %}" class="btn btn-primary btn-outline-primary btn-sm">Read More</a></p>
                   </div>
                 </div> <!-- .media -->
@@ -203,7 +203,7 @@
               <div class="row justify-content-center mb-5" data-aos="fade-up">
                 <div class="col-md-8  text-center">
                   <h2 class="mb-3">Why Choose Us</h2>
-                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                  <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 </div>
               </div>
               <div class="row large-gutters">
