--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -78,7 +78,7 @@
               <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="100">
                 <div class="footer-widget">
                   <h3>Diner Restaurant</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel neque, odio illum. Est minima sint minus sunt ducimus.</p>
+                  <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 </div>
               </div>
               <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="200">
@@ -104,7 +104,7 @@
                 <div class="footer-widget footer-contact-widget">
 
                   <h3>Subscribe</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                  <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver</p>
                   <form action="" class="form-subscribe mb-5">
                     <div class="form-group form-field">
                       <input type="submit" value="Send" class="btn btn-primary">
@@ -130,7 +130,7 @@
           <div class="row">
 
              <p class="footer-text col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="sergejyurskyj@yahoo.com" target="_blank">SYurskyi</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
