--- a/src/meals/templates/Meals/list.html
+++ b/src/meals/templates/Meals/list.html
@@ -24,7 +24,7 @@
             <div class="row justify-content-center">
               <div class="col-md-7 text-center"  data-aos="fade-up">
                 <h2 class="mb-4">Our Specialties</h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eum voluptatem odio expedita laborum fugit repudiandae dolorem consectetur.</p>
+                <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
               </div>
             </div>
           </div>
@@ -38,7 +38,7 @@
               <div class="image" style="background-image: url(img/img_1.jpg);" data-aos="fade"></div>
               <div class="text">
                 <h3>Grilled Egg With Garlic</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$5.00</p>
               </div>
             </div> <!-- .item -->
@@ -47,7 +47,7 @@
               <div class="image order-2 order-md-1"  style="background-image: url(img/img_2.jpg);" data-aos="fade" data-aos-delay="100"></div>
               <div class="text order-1 order-md-2">
                 <h3>Organic Tomato Salad</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$6.00</p>
               </div>
             </div> <!-- .item -->
@@ -56,7 +56,7 @@
               <div class="image order-1 order-md-2 order-lg-2 order-xl-1" style="background-image: url(img/img_3.jpg);" data-aos="fade" data-aos-delay="200"></div>
               <div class="text order-2 order-md-1 order-lg-1 order-xl-2">
                 <h3>Flatbread</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$9.00</p>
                 
               </div>
@@ -66,7 +66,7 @@
               <div class="image order-2" style="background-image: url(img/img_4.jpg);" data-aos="fade" data-aos-delay="300"></div>
               <div class="text order-1 mb-3">
                 <h3>Rack Of Lamb</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$13.00</p>
               </div>
             </div> <!-- .item -->
@@ -75,7 +75,7 @@
               <div class="image order-1 order-lg-1 order-xl-2" style="background-image: url(img/img_5.jpg);" data-aos="fade" data-aos-delay="400"></div>
               <div class="text order-2 order-lg-2 order-xl-1">
                 <h3>Eggplant Parmigiana</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$9.00</p>
               </div>
             </div> <!-- .item -->
@@ -84,7 +84,7 @@
               <div class="image order-2 order-md-1 order-lg-1 order-xl-2" style="background-image: url(img/img_6.jpg);" data-aos="fade" data-aos-delay="500"></div>
               <div class="text order-1 order-md-2 order-lg-2 order-xl-1">
                 <h3>Spicy Meatballs</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo quisquam saepe quaerat.</p>
+                <p>Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
                 <p class="price">$7.00</p>
               </div>
             </div> <!-- .item -->
