--- a/src/reservation/templates/Reservation/reservation.html
+++ b/src/reservation/templates/Reservation/reservation.html
@@ -24,7 +24,7 @@
             <div class="row justify-content-center mb-5">
               <div class="col-md-8  text-center">
                 <h2 class="mb-3">Reservation</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum fuga, alias distinctio voluptatum magni voluptatibus.</p>
+                <p class="lead">Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.</p>
               </div>
             </div>
             <div class="row justify-content-center">
@@ -126,7 +126,7 @@
                 
                   <div class="item">
                     <blockquote class="testimonial">
-                      <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quaerat recusandae molestias incidunt sapiente sit numquam delectus mollitia! Non laudantium impedit voluptas consequatur corrupti. Cumque consequuntur nemo eos et error!&rdquo;</p>
+                      <p>&ldquo;Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.&rdquo;</p>
                       <div class="author">
                         <img src="img/person_1.jpg" alt="Image placeholder" class="mb-3">
                         <h4>Maxim Smith</h4>
@@ -136,7 +136,7 @@
                   </div>
                   <div class="item">
                     <blockquote class="testimonial">
-                      <p>&ldquo;Sint adipisci laborum dolorum ipsa quidem alias ipsum aperiam aut! Quis rerum soluta dolorem iure nihil velit error sequi? Dignissimos accusantium adipisci unde officia? Dolores aut sequi dolorum repellendus quod.&rdquo;</p>
+                      <p>&ldquo;Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.&rdquo;</p>
                       <div class="author">
                         <img src="img/person_2.jpg" alt="Image placeholder" class="mb-3">
                         <h4>Geert Green</h4>
@@ -146,7 +146,7 @@
                   </div>
                   <div class="item">
                     <blockquote class="testimonial">
-                      <p>&ldquo;Ratione alias iure ab facere quia aliquam dolor et voluptates esse nihil corporis distinctio hic ea quo ducimus autem cum amet. Quos accusamus iusto porro nulla temporibus numquam commodi soluta.&rdquo;</p>
+                      <p>&ldquo;Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.&rdquo;</p>
                       <div class="author">
                         <img src="img/person_3.jpg" alt="Image placeholder" class="mb-3">
                         <h4>Dennis Roman</h4>
@@ -156,7 +156,7 @@
                   </div>
                   <div class="item">
                     <blockquote class="testimonial">
-                      <p>&ldquo;Ad quod aspernatur ipsa. Numquam expedita delectus qui ad explicabo voluptas eos vel reiciendis magnam rerum quaerat quisquam accusantium quae saepe ipsam ullam ut ea molestiae porro. Recusandae veniam maxime.&rdquo;</p>
+                      <p>&ldquo;Maja Yurskaja is a Ukrainian chef as well as an executive chief cook of this restaurant in Vancouver.&rdquo;</p>
                       <div class="author">
                         <img src="img/person_2.jpg" alt="Image placeholder" class="mb-3">
                         <h4>Geert Green</h4>
